# nepali-embedding-benchmark

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  pages.yml
registries/models/: baselines.yaml  community.yaml  jangedoo.yaml  overrides.yaml  qwen.yaml
registries/tasks/: en-ne-parallel.yaml  nanobeir-ne.yaml  nepali-hard-negatives.yaml  paraphrase-nepali.yaml  stsb-nepali.yaml
results/community/all-minilm-l6-v3-nepali-rag/da318b7bffcb620b4759aa54f2faad90030994cc/en-ne-parallel-v2/: provenance.json
results/community/all-minilm-l6-v3-nepali-rag/da318b7bffcb620b4759aa54f2faad90030994cc/nanobeir-ne-v2/: provenance.json
results/community/all-minilm-l6-v3-nepali-rag/da318b7bffcb620b4759aa54f2faad90030994cc/nepali-hard-negatives-v2/: provenance.json
schemas/: export-v1.schema.json  export-v2.schema.json  export-v3.schema.json
site/: astro.config.mjs  package-lock.json  package.json
site/public/data/v1/: catalog.json  models.json  results.csv  results.json  tasks.json
site/public/data/v2/: catalog.json  models.json  results.csv  results.json  tasks.json
site/public/data/v3/: catalog.json  models.json  results.csv  results.json  tasks.json
site/src/: env.d.ts
site/src/components/: Badge.tsx  CatalogExplorer.test.tsx  CatalogExplorer.tsx  accessibility.test.tsx
site/src/layouts/: Layout.astro
site/src/lib/: catalog.test.ts  catalog.ts  types.ts
site/src/pages/: index.astro
site/src/pages/compare/: index.astro
site/src/pages/models/: index.astro
site/src/pages/tasks/: index.astro
site/src/styles/: global.css
src/neb/: __init__.py  __main__.py  adapters.py  api.py  cli.py  evaluation.py  export.py  models.py  registry.py  results.py  scaffold.py  schemas.py  tasks.py  wizard.py
tests/: conftest.py  test_adapters.py  test_cli.py  test_contract_datasets.py  test_evaluation.py  test_export.py  test_models.py  test_registry.py  test_results.py  test_scaffold.py  test_schemas.py  test_tasks.py  test_wheel_registry.py  test_wizard.py
(+786 files in other folders)
